2012-06-07 Wolfgang Hofer <hof@gimp.org>

- Implementation of dialog window for the exact align transform filter.
  Now supports 2 modes for path point interpretation.
  The mode is persisted as gimprc setting

     (gap-exact-aligner-path-point-order "0")
     (gap-exact-aligner-path-point-order "1")

  where value 0 (default) is compatible behavior to previous
  implementation (and to the exact aligner script
  that is available in the plug-in regstry)

  use mode TRANSFORM-RESIZE-ADJUST (0) for the transformation
  because this feature is intended to do no clipping.
  
 * gap/gap_detail_align_exec.c [.h]
 * gap/gap_detail_tracking_main.c


2012-05-26 Wolfgang Hofer <hof@gimp.org>

- added AC_CHECK_LIB(gthread-2.0, g_thread_init)
  as suggested in #676701 to fix build on ubuntu 12.10
  
 * configure.in


2012-05-05 Wolfgang Hofer <hof@gimp.org>

- the configure.in script displays error message in case
  when the pkg-config program is not executable.

 * configure.in

2012-05-02 Wolfgang Hofer <hof@gimp.org>

- fixed Bug #675188 Frame filename matching misses 8-digit frame numbers
- fixed Bug #675187 Frame Sequence Reverse handles filename improperly

 * gap/gap_lib.c

2012-01-29 Wolfgang Hofer <hof@gimp.org>

- fixed a bug in the GAP video API that caused a crash when decoding audio.
  This bug occured when GIMP-GAP was built with ffmpeg confiure options that enabled MMX
  and ac3 or aac encoded audio was extracted from videofiles.
  The fix uses an additional aligned buffer (required for proper operation of MMX based
  audio format conversions)
  Note that the current implementation of this fix eliminates the performance advantage 
  of MMX for the audio conversion, but enabled MMX is still preferable for video processing.
  
  The fix is relevant for both ffmpeg-0.6.1 and ffmpeg-0.7.11

- update to ffmpeg-0.7.11 "Peace" that was released on 2012-01-12
  removed confiure "--enable-libfaad" (that is no longer supported by ffmpeg-0.7.11.)
