@@ -1,3 +1,12 @@
+2012-08-28 Wolfgang Hofer <hof@gimp.org>
+
+- Speed up for the BlendFill filter.
+  Use tile chache and write back only changed rows/columns
+  for performance reasons.
+
+ * gap/gap_blend_fill_main.c
+
+
 2012-06-07 Wolfgang Hofer <hof@gimp.org>
 
 - Implementation of dialog window for the exact align transform filter.
